--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link href="./dist/css/styles.css" rel="stylesheet" />
     <link href="./vendor/zeynepjs/dist/zeynep.css" rel="stylesheet"/>
     <link href="./vendor/zeynepjs/examples/css/right.css" rel="stylesheet"/>
+    <link rel="shortcut icon" href="./images/favicon.png" type="image/png">
   </head>
   <body>
 
