--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <a href="#">Qui sommes-nous ?</a>
               </li>
               <li>
-                <a href="#">Contacts</a>
+                <a href="contact.html">Contacts</a>
               </li>
             </ul>
           </div>
@@ -64,7 +64,7 @@
                 <div class="hidden xlight:block">
                   <ul class="mb-2 flex justify-end space-x-5 top-secondary-nav">
                     <li><a href="#">Qui sommes-nous ?</a></li>
-                    <li><a href="#">Contacts</a></li>
+                    <li><a href="contact.html">Contacts</a></li>
                   </ul>
                   <nav class="top-main-nav">
                     <ul class="flex space-x-3">
@@ -544,7 +544,7 @@
               <ul class="f-link text-center md:text-left">
                 <li><a href="#">Sites à Visiter</a></li>
                 <li><a href="#">Circuits</a></li>
-                <li><a href="#">Contacts</a></li>
+                <li><a href="contact.html">Contacts</a></li>
                 <li><a href="#">Mentions Légales</a></li>
               </ul>
             </div>
