--- a/contact.html
+++ b/contact.html
@@ -50,6 +50,7 @@
             <li>
               <a href="#">Qui sommes-nous ?</a>
             </li>
+            <li><a href="blog.html">Blog</a></li>
             <li>
               <a href="contact.html">Contacts</a>
             </li>
@@ -66,6 +67,7 @@
               <div class="hidden xlight:block">
                 <ul class="mb-2 flex justify-end space-x-5 top-secondary-nav">
                   <li><a href="#">Qui sommes-nous ?</a></li>
+                  <li><a href="blog.html">Blog</a></li>
                   <li><a class="active" href="contact.html">Contacts</a></li>
                 </ul>
                 <nav class="top-main-nav">
@@ -123,11 +125,13 @@
                     </div>
                     <div class="md:col-span-2">
                       <label for="message">Votre message*</label>
-                      <textarea name="message" placeholder="Entrez votre message ici..." id="message" rows="9"></textarea>
+                      <textarea name="message" placeholder="Entrez votre message ici..." id="message"
+                        rows="9"></textarea>
                     </div>
                     <div class="md:col-span-2">
                       <div class="flex justify-center items-center">
-                        <button type="submit" class="bg-primary-green text-white hover:bg-green-700 duration-300 px-8 py-3 rounded-lg text-xl lg:text-2xl font-bold">Envoyez</button>
+                        <button type="submit"
+                          class="bg-primary-green text-white hover:bg-green-700 duration-300 px-8 py-3 rounded-lg text-xl lg:text-2xl font-bold">Envoyez</button>
                       </div>
                     </div>
                   </div>
@@ -143,9 +147,11 @@
                       </div>
                       <div class="text-center">
                         <h3 class="text-2xl xlight:text-2xl text-primary font-bold mb-3">Envoyez-nous un email</h3>
-                        <p class="font-light text-base xlight:text-sm mb-5">Email us for general queries, including marketing and partnership opportunities.
+                        <p class="font-light text-base xlight:text-sm mb-5">Email us for general queries, including
+                          marketing and partnership opportunities.
                         </p>
-                        <a class="font-bold text-primary hover:text-secondary duration-300" href="mailto:hello@helpcenter.com">hello@helpcenter.com</a>
+                        <a class="font-bold text-primary hover:text-secondary duration-300"
+                          href="mailto:hello@helpcenter.com">hello@helpcenter.com</a>
                       </div>
                     </div>
                   </div>
@@ -158,9 +164,11 @@
                       </div>
                       <div class="text-center">
                         <h3 class="text-2xl xlight:text-2xl text-primary font-bold mb-3">Appelez-nous</h3>
-                        <p class="font-light text-base xlight:text-sm mb-5">Call us to speak to a member of our team. We are always happy to help.
+                        <p class="font-light text-base xlight:text-sm mb-5">Call us to speak to a member of our team. We
+                          are always happy to help.
                         </p>
-                        <a class="font-bold text-primary hover:text-secondary duration-300" href="tel:+2246467865060">+224 646 786-5060</a>
+                        <a class="font-bold text-primary hover:text-secondary duration-300"
+                          href="tel:+2246467865060">+224 646 786-5060</a>
                       </div>
                     </div>
                   </div>
@@ -173,9 +181,11 @@
                       </div>
                       <div class="text-center">
                         <h3 class="text-2xl xlight:text-2xl text-primary font-bold mb-3">Support</h3>
-                        <p class="font-light text-base xlight:text-sm mb-6">Check out helpful resources, FAQs and developer tools.
+                        <p class="font-light text-base xlight:text-sm mb-6">Check out helpful resources, FAQs and
+                          developer tools.
                         </p>
-                        <a class="font-bold text-primary hover:text-secondary hover:border-secondary border-2 rounded-lg border-primary-green py-2 px-6 duration-300" href="#">Support Center</a>
+                        <a class="font-bold text-primary hover:text-secondary hover:border-secondary border-2 rounded-lg border-primary-green py-2 px-6 duration-300"
+                          href="#">Support Center</a>
                       </div>
                     </div>
                   </div>
