--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
               <li>
                 <a href="#">Qui sommes-nous ?</a>
               </li>
+              <li><a href="blog.html">Blog</a></li>
               <li>
                 <a href="contact.html">Contacts</a>
               </li>
@@ -64,6 +65,7 @@
                 <div class="hidden xlight:block">
                   <ul class="mb-2 flex justify-end space-x-5 top-secondary-nav">
                     <li><a href="#">Qui sommes-nous ?</a></li>
+                    <li><a href="blog.html">Blog</a></li>
                     <li><a href="contact.html">Contacts</a></li>
                   </ul>
                   <nav class="top-main-nav">
