--- a/contact.html
+++ b/contact.html
@@ -27,7 +27,7 @@
         <div class="zeynep text-lg">
           <ul>
             <li>
-              <a href="#">Destination Guinée</a>
+              <a href="destination.html">Destination Guinée</a>
             </li>
             <li>
               <a href="#">Hotels</a>
@@ -72,7 +72,7 @@
                 </ul>
                 <nav class="top-main-nav">
                   <ul class="flex space-x-3">
-                    <li><a href="#">Destination Guinée</a></li>
+                    <li><a href="destination.html">Destination Guinée</a></li>
                     <li><a href="#">Hotels</a></li>
                     <li><a href="#">Restaurants</a></li>
                     <li><a href="#">Circuits</a></li>
@@ -215,7 +215,7 @@
           <div class="mb-5 md:mb-0">
             <ul class="f-link text-center md:text-left">
               <li><a href="#">Qui sommes-nous</a></li>
-              <li><a href="#">Destination Guinée</a></li>
+              <li><a href="destination.html">Destination Guinée</a></li>
               <li><a href="#">Hotels Conakry</a></li>
               <li><a href="#">Restaurants Conakry</a></li>
               <li><a href="#">Évènements</a></li>
