--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
           <div class="zeynep text-lg">
             <ul>
               <li>
-                <a href="#">Destination Guinée</a>
+                <a href="destination.html">Destination Guinée</a>
               </li>
               <li>
                 <a href="#">Hotels</a>
@@ -179,9 +179,6 @@
                      d="M11.25 11.25l.041-.02a.75.75 0 011.063.852l-.708 2.836a.75.75 0 001.063.853l.041-.021M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9-3.75h.008v.008H12V8.25z" />
                  </svg>
                </h3>
-            </div>
-            <div class="mt-4 min-h-[20vh] border border-primary">
-
             </div>
           </div>
         </section>
