--- a/destination.html
+++ b/destination.html
@@ -33,7 +33,7 @@
               <a href="#">Hotels</a>
             </li>
             <li>
-              <a href="#">Restaurants</a>
+              <a href="restaurant.html">Restaurants</a>
             </li>
             <li>
               <a href="#">Circuits</a>
@@ -72,9 +72,9 @@
                 </ul>
                 <nav class="top-main-nav">
                   <ul class="flex space-x-3">
-                    <li><a class="active" href="#">Destination Guinée</a></li>
+                    <li><a class="active" href="destination.html">Destination Guinée</a></li>
                     <li><a href="#">Hotels</a></li>
-                    <li><a href="#">Restaurants</a></li>
+                    <li><a href="restaurant.html">Restaurants</a></li>
                     <li><a href="#">Circuits</a></li>
                     <li><a href="#">Sites à visiter</a></li>
                     <li><a href="#">Évènements</a></li>
@@ -98,7 +98,7 @@
       <!-- Content -->
       <section>
         <div
-          class="main-cover-blog flex justify-center items-center bg-slate-200 h-[30vh] md:h-[40vh] lg:h-[50vh] xlight:h-[54vh] relative">
+          class="main-cover-destination flex justify-center items-center bg-slate-200 h-[30vh] md:h-[40vh] lg:h-[50vh] xlight:h-[54vh] relative">
           <h1 class="font-extrabold header text-white text-center text-3xl sm:text-4xl lg:text-5xl xl:text-6xl">
             Nos Destinations
           </h1>
@@ -464,9 +464,9 @@
           <div class="mb-5 md:mb-0">
             <ul class="f-link text-center md:text-left">
               <li><a href="#">Qui sommes-nous</a></li>
-              <li><a href="#">Destination Guinée</a></li>
+              <li><a href="destination.html">Destination Guinée</a></li>
               <li><a href="#">Hotels Conakry</a></li>
-              <li><a href="#">Restaurants Conakry</a></li>
+              <li><a href="restaurant.html">Restaurants Conakry</a></li>
               <li><a href="#">Évènements</a></li>
             </ul>
           </div>
