--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <a href="#">Hotels</a>
               </li>
               <li>
-                <a href="#">Restaurants</a>
+                <a href="restaurant.html">Restaurants</a>
               </li>
               <li>
                 <a href="#">Circuits</a>
@@ -72,7 +72,7 @@
                     <ul class="flex space-x-3">
                       <li><a href="#">Destination Guinée</a></li>
                       <li><a href="#">Hotels</a></li>
-                      <li><a href="#">Restaurants</a></li>
+                      <li><a href="restaurant.html">Restaurants</a></li>
                       <li><a href="#">Circuits</a></li>
                       <li><a href="#">Sites à visiter</a></li>
                       <li><a href="#">Évènements</a></li>
@@ -535,7 +535,7 @@
                 <li><a href="#">Qui sommes-nous</a></li>
                 <li><a href="#">Destination Guinée</a></li>
                 <li><a href="#">Hotels Conakry</a></li>
-                <li><a href="#">Restaurants Conakry</a></li>
+                <li><a href="restaurant.html">Restaurants Conakry</a></li>
                 <li><a href="#">Évènements</a></li>
               </ul>
             </div>
