sous page restaurant ajouté

--- a/restaurant.html
+++ b/restaurant.html
@@ -229,7 +229,10 @@
             <div
               class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"
             >
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -333,7 +336,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -443,7 +449,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -547,7 +556,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -651,7 +663,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -761,7 +776,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -865,7 +883,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -969,7 +990,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -1079,7 +1103,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -1183,7 +1210,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -1287,7 +1317,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -1397,7 +1430,10 @@
                 </div>
               </a>
 
-              <a class="block group rounded-lg overflow-hidden" href="#">
+              <a
+                class="block group rounded-lg overflow-hidden"
+                href="restaurant-details.html"
+              >
                 <div
                   class="img-cover relative h-[30vh]"
                   style="
@@ -1848,10 +1884,6 @@
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script src="./vendor/zeynepjs/dist/zeynep.js"></script>
-
-    {{--
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/1.6.3/datepicker.min.js"></script>
-    --}}
 
     <script>
       $(function () {
