--- a/index.html
+++ b/index.html
@@ -355,7 +355,7 @@
               <div
                 class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4 sm:gap-6"
               >
-                <a class="block group rounded-lg overflow-hidden" href="#">
+                <a class="block group rounded-lg overflow-hidden" href="sp-hotel.html">
                   <div
                     class="img-cover relative h-[30vh]"
                     style="
@@ -483,7 +483,7 @@
                   </div>
                 </a>
 
-                <a class="block group rounded-lg overflow-hidden" href="#">
+                <a class="block group rounded-lg overflow-hidden" href="sp-hotel.html">
                   <div
                     class="img-cover relative h-[30vh]"
                     style="
@@ -606,7 +606,7 @@
                   </div>
                 </a>
 
-                <a class="block group rounded-lg overflow-hidden" href="#">
+                <a class="block group rounded-lg overflow-hidden" href="sp-hotel.html">
                   <div
                     class="img-cover relative h-[30vh]"
                     style="
